# llvm-bc

./: Cargo.toml  LICENSE  README.md  out.bc
src/: abbrv.rs  bitstream.rs  bitstream_writer.rs  block.rs  lib.rs  operand.rs
src/bitcode/: blocks.rs  constants.rs  mod.rs  module.rs
src/bitstream/: abbrv.rs  bitstream_writer.rs  block.rs  mod.rs  module.rs  operand.rs
