[package]
name = "llvm-bc"
version = "0.1.0"
edition = "2021"
description = "LLVM Bitcode Writer"
authors = ["Edgar Luque <edgar@edgl.dev>"]
keywords = ["llvm", "bitcode", "llvm-bc", "llvm-bitcode"]
categories = ["parser-implementations", "compilers", "api-bindings"]

[dependencies]
bytes = "1.9.0"
smallvec = "1.13.2"

[dev-dependencies]
hex = "0.4.3"
